--- a/deploymentweek4/deploymentapp/templates/d9b380561f878001b68f29e3b37f356f47948196bd95da78c0ce83ec66dae1ba.html
+++ b/deploymentweek4/deploymentapp/templates/d9b380561f878001b68f29e3b37f356f47948196bd95da78c0ce83ec66dae1ba.html
@@ -24,6 +24,7 @@
         <div id="sidebar">
           <h2>Project</h2>
           <a href="/templates/index.html">MapMaster Chat</a>
+<a href="/templates/003342b2caae8daa704c4d6e780cf9c8b7c6d325abc5e521d9cf03cde81ecade.html">Guerra Civil Americana</a>
 <a href="/templates/81f36a64c6db577d89c277f676dcd3ce4bd865dfefa36ef53f2dae8370cb9054.html">La Guerra Civil Española</a>
 <a href="/templates/d9b380561f878001b68f29e3b37f356f47948196bd95da78c0ce83ec66dae1ba.html" class="active">La Guerra Civil Española</a>
 
